[gd_scene load_steps=2 format=3 uid="uid://dt7ohdd6ybc8u"]

[ext_resource type="Script" path="res://src/scenes/zeroSystem.gd" id="1_3rf1t"]

[node name="ZeroSystem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_3rf1t")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.5
offset_top = -15.5
offset_right = 134.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 28

[node name="LoadEXE" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Extract from PFW3 archive."
text = "Load EXE
"

[node name="LoadPAC" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Extract from PFW3 archive."
text = "Load PAC.BIN / .PAC
"

[node name="ZEROLoadEXE" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("SLPM_666.18, SLPM_669.43, SLPM_656.07, SLPM_656.71, SLPS_257.19")
use_native_dialog = true

[node name="ZEROLoadPAC" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("PAC.BIN, *.PAC")
use_native_dialog = true

[node name="ZEROLoadFOLDER" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a Directory"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[connection signal="pressed" from="HBoxContainer/LoadEXE" to="." method="_on_load_exe_pressed"]
[connection signal="pressed" from="HBoxContainer/LoadPAC" to="." method="_on_load_pac_pressed"]
[connection signal="file_selected" from="ZEROLoadEXE" to="." method="_on_zero_load_exe_file_selected"]
[connection signal="file_selected" from="ZEROLoadPAC" to="." method="_on_zero_load_pac_file_selected"]
[connection signal="dir_selected" from="ZEROLoadFOLDER" to="." method="_on_zero_load_folder_dir_selected"]
